--- a/第七次作业/逐字显示.html
+++ b/第七次作业/逐字显示.html
@@ -9,7 +9,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     /**
-     逐个显示加载函数
+     逐字显示加载函数
      @param {string} elementId 加载内容的元素id
      @param {string} textToLoad 加载的内容
      @param {number} speed 加载速度，单位：毫秒
